--- a/past problems/kontrolni/2022/sequences/sequences.tex
+++ b/past problems/kontrolni/2022/sequences/sequences.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \paragraph*{}
-Текущият анализ е по-подробно обяснение на сложността на авторските решения, предложени за задача sequences на контролното С група през 2022 година.
+Текущият анализ е по-подробно обяснение на сложността на авторските решения, предложени за задача sequences на контролното за С група през 2022 година.
 
 \section*{Част 1}
 \paragraph*{}
