--- a/past problems/kontrolni/2022/sequences/sequences.tex
+++ b/past problems/kontrolni/2022/sequences/sequences.tex
@@ -44,7 +44,7 @@
     \displaystyle\sum_{x \in N_2} 2 \sqrt{x} = 2\displaystyle\sum_{j=1}^{[\sqrt{n}]} \sqrt{\frac{n}{j}} = 2 \sqrt{n} \displaystyle\sum_{j=1}^{[\sqrt{n}]} \frac{1}{\sqrt{j}} < 2 \sqrt{n} \cdot (2 \sqrt{\sqrt{n}+1} - 1) \approx 4 n^{\frac{3}{4}}
 \end{equation*}
 
-Тук използвахме наготово, че $\frac{1}{\sqrt{1}} + \frac{1}{\sqrt{2}} + ... + \frac{1}{\sqrt{m}} \approx 2\sqrt{m+1} - 1$.
+Тук използвахме наготово, че $\frac{1}{\sqrt{1}} + \frac{1}{\sqrt{2}} + ... + \frac{1}{\sqrt{m}} < 2\sqrt{m+1} - 1$.
 
 \subsection*{Довършване}
 \paragraph*{}
